<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context="com.example.opencv.NotifyActivity">

<!---->

    <ImageView
        android:id="@+id/paw5"
        android:layout_width="match_parent"
        android:layout_height="43dp"
        android:layout_marginEnd="5dp"
        app:srcCompat="@drawable/pinkpaw" />

    <ImageView
        android:id="@+id/paw"
        android:layout_width="144dp"
        android:layout_height="43dp"
        android:layout_marginEnd="5dp"
        app:srcCompat="@drawable/pinkpaw" />

    <ImageView
        android:id="@+id/paw2"
        android:layout_width="521dp"
        android:layout_height="43dp"
        android:layout_marginEnd="5dp"
        app:srcCompat="@drawable/pinkpaw" />

    <TextView
        android:id="@+id/txtHelp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="casual"
        android:gravity="center"
        android:text="@string/notify_title"
        android:textSize="35sp"
        android:textStyle="bold"
        android:layout_gravity="center_horizontal" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/dondung" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/time_int"
        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
        android:layout_margin="4dp"/>

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/interval_options"
        android:layout_margin="4dp">
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/one_hr"
            android:id="@+id/one_hr"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/four_hr"
            android:checked="true"
            android:id="@+id/four_hr"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/eight_hr"
            android:id="@+id/eight_hr"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/once_day"
            android:id="@+id/once_day"/>
    </RadioGroup>

    <Button
        android:id="@+id/scheduleJobButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:text="@string/schedule_job"
        android:layout_gravity="center_horizontal"/>
    <Button
        android:id="@+id/sendNowButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:text="@string/send_job"
        android:layout_gravity="center_horizontal"/>

    <Button
        android:id="@+id/cancelJobsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:text="@string/cancel_jobs"
        android:layout_gravity="center_horizontal"/>

</LinearLayout>

<!--<EditText-->
<!--android:id="@+id/edit_text_title"-->
<!--android:layout_width="match_parent"-->
<!--android:layout_height="wrap_content"-->
<!--android:hint="Title" />-->
<!--<EditText-->
<!--android:id="@+id/edit_text_message"-->
<!--android:layout_width="match_parent"-->
<!--android:layout_height="wrap_content"-->
<!--android:hint="Message" />-->
<!--<Button-->
<!--android:layout_width="match_parent"-->
<!--android:layout_height="wrap_content"-->
<!--android:onClick="sendOnChannel1"-->
<!--android:text="Send on Channel 1" />-->
<!--<Button-->
<!--android:layout_width="match_parent"-->
<!--android:layout_height="wrap_content"-->
<!--android:onClick="sendOnChannel2"-->
<!--android:text="Send on Channel 2" />-->

<!--<TextView-->
<!--android:layout_width="wrap_content"-->
<!--android:layout_height="wrap_content"-->
<!--android:text="@string/requires"-->
<!--android:textAppearance="@style/TextAppearance.AppCompat.Subhead"-->
<!--android:layout_margin="4dp"/>-->

<!--<LinearLayout-->
<!--android:layout_width="match_parent"-->
<!--android:layout_height="wrap_content"-->
<!--android:orientation="horizontal"-->
<!--android:layout_margin="4dp">-->
<!--<Switch-->
<!--    android:layout_width="wrap_content"-->
<!--    android:layout_height="wrap_content"-->
<!--    android:text="@string/device_idle"-->
<!--    android:id="@+id/idleSwitch"/>-->
<!--<Switch-->
<!--    android:layout_width="wrap_content"-->
<!--    android:layout_height="wrap_content"-->
<!--    android:text="@string/device_charging"-->
<!--    android:id="@+id/chargingSwitch"/>-->
<!--</LinearLayout>-->

<!--<Switch-->
<!--android:layout_width="wrap_content"-->
<!--android:layout_height="wrap_content"-->
<!--android:text="@string/periodic_interval"-->
<!--android:id="@+id/periodicSwitch"-->
<!--android:layout_margin="4dp"/>-->

<!--<LinearLayout-->
<!--android:layout_width="match_parent"-->
<!--android:layout_height="wrap_content"-->
<!--android:orientation="horizontal"-->
<!--android:layout_margin="4dp">-->
<!--<TextView-->
<!--    android:layout_width="wrap_content"-->
<!--    android:layout_height="wrap_content"-->
<!--    android:text="@string/override_deadline"-->
<!--    android:id="@+id/seekBarLabel"-->
<!--    android:textAppearance="@style/TextAppearance.AppCompat.Subhead"/>-->
<!--<TextView-->
<!--    android:layout_width="wrap_content"-->
<!--    android:layout_height="wrap_content"-->
<!--    android:text="@string/not_set"-->
<!--    android:id="@+id/seekBarProgress"-->
<!--    android:textAppearance="@style/TextAppearance.AppCompat.Subhead"/>-->

<!--</LinearLayout>-->

<!--<SeekBar-->
<!--android:layout_width="match_parent"-->
<!--android:layout_height="wrap_content"-->
<!--android:id="@+id/seekBar"-->
<!--android:layout_margin="4dp"/>-->