<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dppaw_vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/menu_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:fontFamily="casual"
        android:text="@string/app_name"
        android:textSize="50sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.526"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_img_upload"
        android:layout_width="132dp"
        android:layout_height="119dp"
        android:layout_gravity="center"
        android:layout_marginEnd="116dp"
        android:background="@drawable/pinkpaw"
        android:fontFamily="casual"
        android:scaleType="fitStart"
        android:text="@string/play"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/menu_title" />

    <Button
        android:id="@+id/btn_option"
        android:layout_width="124dp"
        android:layout_height="105dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="60dp"
        android:background="@drawable/pinkpaw"
        android:fontFamily="casual"
        android:rotation="45"
        android:scaleType="fitStart"
        android:text="@string/option"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/btn_help"
        app:layout_constraintTop_toBottomOf="@+id/btn_img_upload" />

    <Button
        android:id="@+id/btn_help"
        android:layout_width="118dp"
        android:layout_height="110dp"
        android:layout_gravity="center"
        android:layout_marginEnd="30dp"
        android:background="@drawable/pinkpaw"
        android:fontFamily="casual"
        android:rotation="45"
        android:scaleType="fitStart"
        android:text="@string/help"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btn_option" />

    <ImageView
        android:id="@+id/menu_cat"
        android:layout_width="288dp"
        android:layout_height="317dp"
        android:layout_marginStart="120dp"
        android:layout_marginTop="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/menu_title"
        app:srcCompat="@drawable/rightcat_streach" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="20dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp" />


</androidx.constraintlayout.widget.ConstraintLayout>